# term_size-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html  justfile  rustfmt.toml
doc/: search-index.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/marker/: trait.Copy.js
doc/src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
doc/src/libc/unix/: mod.rs.html
doc/src/libc/unix/notbsd/: mod.rs.html
doc/src/libc/unix/notbsd/linux/: mod.rs.html
doc/src/libc/unix/notbsd/linux/other/: mod.rs.html
doc/src/libc/unix/notbsd/linux/other/b64/: mod.rs.html  x86_64.rs.html
doc/src/term_size/src/: lib.rs.html
doc/term_size/: fn.dimensions.html  fn.ioctl.html  index.html
src/: lib.rs
src/platform/: unix.rs  windows.rs
